--- a/WindowsFormsAppSellPoint/App.config
+++ b/WindowsFormsAppSellPoint/App.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <connectionStrings>
     <add name="DBConnection" connectionString="Server=.;Database=SellPoint;User Id=sa;Password=123;" />
+    <add name="WindowsFormsAppSellPoint.Properties.Settings.ConnectionString"
+      connectionString="Data Source=DESKTOP-H1LCLOS;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
