--- a/WindowsFormsAppSellPoint/App.config
+++ b/WindowsFormsAppSellPoint/App.config
@@ -10,5 +10,8 @@
     <add name="WindowsFormsAppSellPoint.Properties.Settings.ConnectionString"
       connectionString="Data Source=DESKTOP-H1LCLOS;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="WindowsFormsAppSellPoint.Properties.Settings.Create_database_SellPoint_ConnectionString"
+      connectionString="Data Source=DESKTOP-H1LCLOS;Initial Catalog=&quot;Create database SellPoint;&quot;;User ID=sa;Password=123"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
