--- a/WindowsFormsAppSellPoint/WindowsFormsAppSellPoint.csproj
+++ b/WindowsFormsAppSellPoint/WindowsFormsAppSellPoint.csproj
@@ -107,6 +107,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="FormSplash.resx">
       <DependentUpon>FormSplash.cs</DependentUpon>
