cambios en la bd

--- a/WindowsFormsAppSellPoint/App.config
+++ b/WindowsFormsAppSellPoint/App.config
@@ -6,9 +6,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <connectionStrings>
-    <add name="DBConnection" connectionString="Server=.;Database=SellPoint;User Id=sa;Password=123;" />
+    <add name="DBConnection" connectionString="Server=LAPTOPCAT05\SQLEXPRESS;Database=SellPoint;User Id=sa;Password=123;" />
     <add name="WindowsFormsAppSellPoint.Properties.Settings.ConnectionString"
-      connectionString="Data Source=DESKTOP-H1LCLOS;Integrated Security=True"
+      connectionString="Data Source=LAPTOPCAT05;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
