limite para no insetar letras en los campos DOC, TEL y CRED

--- a/WindowsFormsAppSellPoint/WindowsFormsAppSellPoint.csproj
+++ b/WindowsFormsAppSellPoint/WindowsFormsAppSellPoint.csproj
@@ -168,7 +168,7 @@
     <None Include="Resources\Splashbien-removebg-preview.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Proyecto Entidades\Entidades\ProyectoEntidades.csproj">
+    <ProjectReference Include="..\..\Proyecto Entidades\Proyecto Entidades\Entidades\ProyectoEntidades.csproj">
       <Project>{a1483a8c-dd80-4b4d-92d1-18088d706afb}</Project>
       <Name>ProyectoEntidades</Name>
     </ProjectReference>
